# ChangeLog for dev-php5/ZendFramework
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.56 2009/07/19 11:44:40 gurligebis Exp $

  19 Jul 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  ZendFramework-1.8.3.ebuild:
  Adding requirement for tokenize when using cli, fixing bug 278278

  18 Jul 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  ZendFramework-1.8.3.ebuild:
  Require PHP to be built with simplexml when cli is used, fixing bug 
  276488

*ZendFramework-1.8.3 (12 Jun 2009)

  12 Jun 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  +ZendFramework-1.8.3.ebuild:
  Version bump, #270880

*ZendFramework-1.7.7 (29 Mar 2009)

  29 Mar 2009; Peter Volkov <pva@gentoo.org> +ZendFramework-1.7.7.ebuild:
  Version bump.

*ZendFramework-1.7.6 (07 Mar 2009)

  07 Mar 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.7.2.ebuild, ZendFramework-1.7.5.ebuild,
  +ZendFramework-1.7.6.ebuild:
  Bumping to 1.7.6, removing old version and fixing typo

  25 Feb 2009; Markus Meier <maekke@gentoo.org> ZendFramework-1.7.5.ebuild:
  amd64 stable, bug #259512

  22 Feb 2009; Raúl Porcel <armin76@gentoo.org> ZendFramework-1.7.5.ebuild:
  x86 stable wrt #259512

  21 Feb 2009; Jeroen Roovers <jer@gentoo.org> ZendFramework-1.7.5.ebuild:
  Stable for HPPA (bug #259512).

  20 Feb 2009; Brent Baude <ranger@gentoo.org> ZendFramework-1.7.5.ebuild:
  Marking ZendFramework-1.7.5 ppc64 for bug 259512

  20 Feb 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  ZendFramework-1.7.5.ebuild:
  ppc stable, bug #259512

*ZendFramework-1.7.5 (20 Feb 2009)

  20 Feb 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  -ZendFramework-1.7.0.ebuild, -ZendFramework-1.7.3.ebuild,
  +ZendFramework-1.7.5.ebuild:
  Version bump, security bug #259512

  06 Feb 2009; Jeroen Roovers <jer@gentoo.org> ZendFramework-1.7.2.ebuild:
  Stable for HPPA (bug #256860).
