@@ -20,13 +20,13 @@ DIST ZendFramework-1.8.3.tar.gz 40091777 RMD160 e6fe6ecec13a982e9d99c57ed89554ee
 EBUILD ZendFramework-1.7.5.ebuild 1726 RMD160 5ec1f69bcae5b12503d047df33170b8d7713acc5 SHA1 1ca00eae5995e511622435df837453756bd875f2 SHA256 022843e1c3ea0f3e6fd1033eaf72e333331a18fa610b7a9cff998e01a27d5a5f
 EBUILD ZendFramework-1.7.6.ebuild 1731 RMD160 2769606bb9454fd34ef4a6134836f95dcea7b4e2 SHA1 06838217466ae0fe399d91862afa5f979dfa77e1 SHA256 6efa0ac7bd845ef4cecf393fe3e50a1e6399f8cd8c4d1c1162f4bac671d07acb
 EBUILD ZendFramework-1.7.7.ebuild 1724 RMD160 6606fa6e4c83c5e584d2f35694e7fb7491c7e261 SHA1 4d8078d3c6895f005e6f78990edae2bf603544ff SHA256 809321d392bd3a547355b642aa3154ed28b0176faab1c16de5bdcc3e4b1a1a59
-EBUILD ZendFramework-1.8.3.ebuild 1932 RMD160 8abfc0e362ff6b057ab4724f51c669cb657fb5b2 SHA1 8a575a46a43de7a1b9928021bf9730a397e8e054 SHA256 e6d03ffeef56c0ec68e7d9ddd1ae0e54eb26fb666154848e1275df1555bcade9
-MISC ChangeLog 8886 RMD160 d285eb2859acdb7ff314ea3f48dab1fab7a2825b SHA1 43c4280efee266abe63c46486ce8fafb26fa0cde SHA256 389d80d9fcb04991f3c0dea62a5ca4d9ad5c7e2200cfc903e2214211df878d58
+EBUILD ZendFramework-1.8.3.ebuild 2002 RMD160 abbccc32a98b0723f8e20242acaa33657ed50158 SHA1 1ce282b960fdf11c79c9c3e5464dee9557aa1811 SHA256 e026e2e54231967b820f8144550d9fd76e8ad46922ef56ac86e3295e8ddbb276
+MISC ChangeLog 9065 RMD160 7a2006fc055c9dcd89fa959545b6378d495de5fc SHA1 909694e5bfa8ca74f9d4bfa83c6dbde1633504d7 SHA256 bc5266d838c1009b1782cd4c832734eb66ca8ff522f2957b47873f5775eb17c3
 MISC metadata.xml 523 RMD160 129ba00df70b4e9d7ccb7b8dc828e9406f9e312d SHA1 f5e9925403974e649a44402617249bb9dcc34f92 SHA256 ea4383a6e685b9e68b44e3edf3494439ecaf4ac56e4bf1bc3cd5dd5c6427ccec
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEUEARECAAYFAkpjBzIACgkQsR7PQhRXYElUDgCfRY0LsCfPI/UbQgNpH2G/qe/z
-6loAl10RD4Xv1qWI4fP3ZmQlnC3862w=
-=i60+
+iEYEARECAAYFAkpjCQYACgkQsR7PQhRXYEkWSACfRWZ0TVt1J5hGFTAqtG8KUWv0
+gz0AnR9sqWSwMwtwCjFQjgaHKuYji4nT
+=Rw++
 -----END PGP SIGNATURE-----
