@@ -1,6 +1,11 @@
 # ChangeLog for dev-php5/ZendFramework
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.56 2009/07/19 11:44:40 gurligebis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.57 2009/07/19 11:52:28 gurligebis Exp $
+
+  19 Jul 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
+  ZendFramework-1.8.3.ebuild:
+  Broken documentation when using both minimal and doc useflags, 
+  fixing bug 277064
 
   19 Jul 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
   ZendFramework-1.8.3.ebuild:
